# TFRAG

./: .gitignore  DLinear_ETTh1.sh  README.md  README_ZH.md  TFRAG_ETTh2.sh  ablation_study.sh  all_model.sh  any_model_with_rag_ETTh1.sh  any_model_with_rag_ETTh2.sh  any_model_with_rag_ETTm1.sh  any_model_with_rag_Exchange.sh  any_model_with_rag_traffic.sh  best_results.csv  demo.ipynb  freq_analysis_all.py  freq_metric_plot.py  mla.ipynb  nohup.out  pyproject.toml  result_long_term_forecast.txt  result_summary.parquet  run.py
data_provider/: data_loader.py
exp/: exp_basic.py  exp_imputation.py  exp_long_term_forecasting.py  exp_short_term_forecasting.py
models/: DLinear.py  FEDformer.py  Memory.py  PatchTST.py  RL_GRPO.py  TFRAG.py  iTransformer.py  model_factory.py  rag_plugin.py
scripts/short_term_forecast/: iTransformer_M4.sh
utils/: print_args.py  tools.py
