[project]
name = "srrf"
version = "0.1.0"
description = "Self-adaptive Retrieval-augmented Reinforcement learning for Time Series Forecasting"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tension"},
]
keywords = ["time-series", "forecasting", "retrieval-augmented", "reinforcement-learning"]

dependencies = [
    "einops>=0.6.0",
    "faiss-cpu>=1.7.0",
    "local-attention>=1.8.0",
    "matplotlib>=3.5.0",
    "numpy>=1.22.0,<2.0.0",
    "pandas>=1.4.0",
    "patool>=1.12",
    "reformer-pytorch>=1.4.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0",
    "sktime>=0.16.0",
    "sympy>=1.10.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
    "PyWavelets>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/yourusername/srrf"
Repository = "https://github.com/yourusername/srrf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
